all get method can access by collab
70%